--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-svc
+  name: hello-service
   namespace: demo
 spec:
   type: NodePort
   selector:
     app: hello
   ports:
-  - port: 80
-    targetPort: 8080
-    nodePort: 30080
+    - port: 80        # Service port
+      targetPort: 80  # Container port
+      nodePort: 30080 # Host port
